=== gnome-user-share 0.30 ===

2008-03-31  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.30

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/user_share.c (main): Use the GTK+ main loop, not our own,
	re-use the X Display opened by GTK+ for ourselves, rather than opening
	a different one, fixes httpd children not getting killed properly
	when exiting the session (Closes: #519804)

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* data/dav_user_2.2.conf.in: Allow users and distributions
	to change the default location for HTTPD modules with
	--with-modules-path=..., still defaults to /etc/httpd/modules/
	(Closes: #518647)

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Generate the dav_user_2.2.conf
	file so the location of the dav_groupfile is the
	one used in the installation
	* data/dav_user_2.2.conf: Rename to...
	* data/dav_user_2.2.conf.in: ... this
	(Closes: #518681)

2008-03-08  Jaap Haitsma  <jaap@haitsma.org>

	* configure.in:
	* data/Makefile.am:
	* src/file-share-properties.c: (flush_password), (update_ui),
	(main):
	Move from libglade to gtkbuilder. Fixes bug #519634

2008-03-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Fix more stupidness

2008-03-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Fix dav configuration linking, again

2008-03-02  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Patch from Baptiste Mille-Mathias
	<bmm80@free.fr> to install the autostart desktop file
	in the right directory (Closes: #519806)

2008-02-29  Jaap Haitsma  <jaap@haitsma.org>

	* Makefile.am: Remove gnome-user-share.spec

2008-02-29  Jaap Haitsma  <jaap@haitsma.org>

	* README: Add to readme that also Avahi can be used

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-user-share.spec: Remove, it's outdated

2008-02-29  Bastien Nocera  <hadess@hadess.net>
