@@ -1,3 +1,8 @@
+2008-03-31  Bastien Nocera  <hadess@hadess.net>
+
+	* data/Makefile.am: Don't ship dav_user_2.2.conf in the tarball,
+	spotted by Thorsten Vollmer <thorsten@thvo.de> (Closes: #525372)
+
 === gnome-user-share 0.30 ===
 
 2008-03-31  Bastien Nocera  <hadess@hadess.net>
